[package]
name = "geo-weights"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.14.0"
geo-types = "0.6.0"
num-traits = "0.2.12"
serde = { version = "1.0", features = ["derive"] }