[package]
name = "geostats"
version = "0.1.5"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.74"

# rayon = "1.5"
# wasm-bindgen-rayon = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

geo-weights = { path = '../weights', version="0.1.0"}
geo-stats = { path = '../stats', version="0.1.0"}

geo = "0.23.0"
geo-types = "0.7.7"
geojson = { version = "0.24.0", featuers = ["geo-types"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }

serde-wasm-bindgen = "0.4"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
wasm-opt=['-O4']
