[package]
name = "geo-weights"
version = "0.1.2"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"
description = "Crate for generating weights matrixes from geospatial data."
license="MIT"
repository = "https://github.com/matico-platform/geo-stats"
keywrods=["geo","stats"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
geo-types = "0.7.7"
num-traits = "0.2.12"
serde = { version = "1.0", features = ["derive"] }
geojson = { version = "0.24.0", featuers = ["geo-types"] }
nalgebra-sparse = "0.7.1"
nalgebra = "0.31.2"

# polars = { git = "https://github.com/stuartlynn/polars.git", branch = 'wasm_rebase', default-features = false, features = ["ipc"] }
# geopolars = { git = "https://github.com/stuartlynn/geopolars.git", branch = "wasm_test" }
